--- a/src/example_backend/Cargo.toml
+++ b/src/example_backend/Cargo.toml
@@ -9,6 +9,8 @@ edition = "2021"
 crate-type = ["cdylib"]
 
 [dependencies]
-candid = "0.10"
-ic-cdk = "0.13"
-ic-cdk-timers = "0.7" # Feel free to remove this dependency if you don't need timers
+candid = "0.10.8"
+ic-cdk = "0.14.0"
+ic-cdk-timers = "0.8.0" # Feel free to remove this dependency if you don't need timers
+ic-stable-structures="0.6.4"
+serde="1.0.132"
