--- a/src/example_backend/Cargo.toml
+++ b/src/example_backend/Cargo.toml
@@ -9,8 +9,9 @@ edition = "2021"
 crate-type = ["cdylib"]
 
 [dependencies]
-candid = "0.10.8"
-ic-cdk = "0.14.0"
-ic-cdk-timers = "0.8.0" # Feel free to remove this dependency if you don't need timers
-ic-stable-structures="0.6.4"
-serde="1.0.132"
+candid = "0.8"
+ic-cdk = "0.7"
+ic-cdk-timers = "0.1" # Feel free to remove this dependency if you don't need timers
+ic-stable-structures = "0.5.4"
+serde = "1.0.132"
+ic-cdk-macros = "0.8.1"
